# skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  justfile  pyproject.toml
.codex/rules/: default.rules
.codex/skills/agentify-repo/agents/: openai.yaml
.codex/skills/configure-codex/: SKILL.md
.codex/skills/configure-codex/agents/: openai.yaml
.codex/skills/configure-codex/references/: codex-environment.md  (+1 more)
.codex/skills/evals/: SKILL.md
.codex/skills/gh-fix-ci/: SKILL.md
.codex/skills/init-repo/: SKILL.md
.codex/skills/yeet/: SKILL.md
.codex/skills/zach-stack/: SKILL.md
.github/workflows/: check.yml  codex-review-prompt.md  codex-review.yml  skills-eval.yml
evals/: skill-rubric.schema.json  test_codex_skill_runtime_evals.py
evals/agentify-repo/: prompt_set.csv  test.jsonl
evals/configure-codex/: prompt_set.csv  test.jsonl
evals/init-repo/: prompt_set.csv  test.jsonl
evals/troubleshoot-sandbox/: prompt_set.csv  test.jsonl
evals/zach-stack/: prompt_set.csv  test.jsonl
scripts/: lint-markdown-references.py  run-skill-evals.py  sync-custom-skills.py  test-custom-skills.py  test-custom-skills.sh  validate-custom-skills.py  verify-custom-skill-mirror.py
skills/.custom/: AGENTS.md
skills/.custom/agentify-repo/: SKILL.md
skills/.custom/configure-codex/: SKILL.md
skills/.custom/evals/: agentify-repo.json  configure-codex.json  init-repo.json  zach-stack.json
skills/.custom/init-repo/: SKILL.md
skills/.custom/remember-that/: SKILL.md
skills/.custom/troubleshoot-sandbox/: SKILL.md
skills/.custom/zach-stack/: SKILL.md
(+46 files in other folders)
