[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "skills"
version = "0.0.0"
description = "Personal tooling and skill-catalog support scripts for the skills repo."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pre-commit>=3.7",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
