[project]
name = "skills"
version = "0.0.0"
description = "Personal tooling and skill-catalog support scripts for the skills repo."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pytest>=8.3",
  "pre-commit>=3.7",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "skills/.curated",
  "skills/.system",
  "skills/.codex",
  ".pre-commit-cache",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_configs = true
disable_error_code = ["annotation-unchecked"]
files = [
  "scripts",
]
exclude = [
  "skills/.curated",
  "skills/.system",
  "skills/.codex",
  ".git",
  ".venv",
]

[tool.pytest.ini_options]
markers = [
  "codex_eval: runs end-to-end Codex skill evaluations (opt-in via env vars)",
]
